# code2AT

./: Makefile  Makefile.am  Makefile.in  config.status  configure  configure.scan  libtool  pole.h  program.c
.deps/: objetosc.Plo  objetosc.Po  objpol-objetosc.Po  objpol-pole.Po  objpol-program.Po  pole.Plo  pole.Po  program.Po
autom4te.cache/: output.0  output.1  output.3  requests  traces.0  traces.1  traces.2  traces.3  traces.4
objpol-1.0/: configure.ac  objetosc.c  objetosc.h  pole.c
objpol-1.0/_build/sub/: Makefile  config.status  libobj.la  objetosc.lo  objpol  pole.lo
objpol-1.0/_build/sub/.deps/: objetosc.Plo  objpol-objetosc.Po  objpol-pole.Po  objpol-program.Po  pole.Plo
objpol-1.0/_build/sub/.libs/: libobj.lai  libobj.so.1.0.0  objpol
